--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "homepage": "https://github.com/jheinnic/live-random-art",
   "license": "MIT",
   "scripts": {
-    "build:dev": "npm run build:sdk && webpack --config config/webpack.dev.js --progress --profile",
+    "build:dev": "npm run build:sdk && webpack --config config/webpack.dev.js --progress --profile --context client/",
     "build:docker": "npm run build:prod && docker build -t angular2-webpack-start:latest .",
-    "build:prod": "npm run build:sdk && webpack --config config/webpack.prod.js  --progress --profile --bail",
+    "build:prod": "npm run build:sdk && webpack --config config/webpack.prod.js  --progress --profile --bail --context client/",
     "build:sdk": "lb-sdk server/serverBuild.js client/app/shared/sdk -d ng2web -i enabled",
     "build": "npm run build:dev",
     "ci": "npm run lint && npm test && npm run e2e",
@@ -28,8 +28,8 @@
     "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./client/",
     "e2e:live": "npm run e2e -- --elementExplorer",
     "e2e": "npm run protractor",
-    "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --env.githubDev",
-    "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --env.githubProd",
+    "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --env.githubDev --context client/",
+    "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --env.githubProd --context client/",
     "github-deploy": "npm run github-deploy:dev",
     "lint": "npm run tslint \"client/**/*.ts\"",
     "postversion": "git push && git push --tags",
@@ -44,10 +44,12 @@
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
     "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --context client/",
     "server:prod": "http-server dist --cors",
-    "server:prod:ci": "http-server dist -p 3000 --cors",
+    "server:prod:ci": "http-server dist -p 4000 --cors",
     "server": "npm run server:dev",
-    "start:hmr": "npm run server:dev:hmr",
     "start": "npm run server:dev",
+    "start:dev": "npm run server:dev",
+    "start:hmr": "npm run server:dev:hmr",
+    "start:dev:hmr": "npm run server:dev:hmr",
     "test": "karma start",
     "tslint": "tslint",
     "typedoc": "typedoc",
@@ -60,8 +62,12 @@
     "webdriver-manager": "webdriver-manager",
     "webdriver:start": "npm run webdriver-manager start",
     "webdriver:update": "npm run webdriver-manager update",
-    "webpack-dev-server": "webpack-dev-server",
+    "webpack-dev-server": "webpack-dev-server --context client/",
     "webpack": "webpack"
+  },
+  "engine": {
+    "node": "6.9.2",
+    "npm": "^3.10.9"
   },
   "removed": {
     "angular": "^1.6.0",
@@ -80,8 +86,6 @@
     "@angular/platform-browser-dynamic": "^2.4.1",
     "@angular/platform-server": "^2.4.1",
     "@angular/router": "^3.4.1",
-    "@angular2-material/core": "^2.0.0-alpha.8-2",
-    "@angular2-material/tabs": "^2.0.0-alpha.8-2",
     "@angularclass/conventions-loader": "^1.0.13",
     "@angularclass/hmr": "^1.2.2",
     "@angularclass/hmr-loader": "^3.0.2",
@@ -118,9 +122,9 @@
     "loopback-connector-mongodb": "^1.17.0",
     "loopback-datasource-juggler": "^2.39.0",
     "loopback-ds-timestamp-mixin": "^3.4.0",
-    "metrics": "^0.1.10",
+    "metrics": "^0.1.11",
     "mongodb": "2.2.16",
-    "ng2-cloudinary": "^0.7.0",
+    "ng2-cloudinary": "^0.8.0",
     "ng2-nvd3": "^1.1.3",
     "node-pre-gyp": "0.6.32",
     "once": "1.3.3",
@@ -140,9 +144,9 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
+    "@types/es6-promise": "^0.0.32",
     "@types/hammerjs": "^2.0.33",
-    "@types/mocha": "^2.2.34",
-    "@types/node": "^6.0.52",
+    "@types/node": "^6.0.54",
     "@types/selenium-webdriver": "^2.53.37",
     "@types/socket.io-client": "^1.4.29",
     "@types/source-map": "^0.5.0",
@@ -156,7 +160,7 @@
     "codelyzer": "^2.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
-    "debug": "^2.5.1",
+    "debug": "^2.6.0",
     "ejs-loader": "^0.3.0",
     "eslint": "^3.12.2",
     "eslint-config-google": "^0.7.1",
@@ -166,9 +170,9 @@
     "file-loader": "^0.9.0",
     "gh-pages": "^0.12.0",
     "gulp": "^3.9.1",
-    "gulp-util": "^3.0.7",
+    "gulp-util": "^3.0.8",
     "html-webpack-plugin": "^2.24.1",
-    "html-webpack-template": "^5.5.1",
+    "html-webpack-template": "^6.0.0",
     "imports-loader": "^0.7.0",
     "istanbul-instrumenter-loader": "^1.1.0",
     "jshint": "^2.9.4",
@@ -199,7 +203,8 @@
     "temp": "^0.8.3",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "^1.1.2",
-    "ts-node": "^1.7.2",
+    "ts-loader": "^1.3.3",
+    "ts-node": "^1.7.3",
     "tslint": "^4.1.1",
     "tslint-loader": "^3.3.0",
     "typescript": "2.1.1",
@@ -209,7 +214,7 @@
     "webpack-dev-middleware": "^1.9.0",
     "webpack-dev-server": "2.1.0-beta.12",
     "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "^1.1.2",
+    "webpack-merge": "^2.0.0",
     "yargs": "^6.5.0"
   }
 }
