Next stable milestone...

--- a/package.json
+++ b/package.json
@@ -103,16 +103,21 @@
     "async": "^2.0.1",
     "body-parser": "^1.15.2",
     "canvas": "^1.6.2",
+    "chai-as-promised": "^6.0.0",
+    "chai-immutable": "^1.6.0",
     "chance": "^1.0.4",
     "cloudinary": "^1.4.6",
     "compression": "^1.6.2",
     "core-js": "^2.4.1",
     "cors": "^2.8.1",
+    "dirty-chai": "^1.2.2",
     "errorhandler": "^1.5.0",
+    "fluent-interface-builder": "^1.0.1",
     "gossipmonger": "^0.1.10",
     "helmet": "^3.1.0",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
+    "immutable": "^3.8.1",
     "kmeans-js": "^0.1.2",
     "lodash": "^4.17.2",
     "loopback": "^2.22.0",
@@ -146,7 +151,9 @@
   "devDependencies": {
     "@types/es6-promise": "^0.0.32",
     "@types/hammerjs": "^2.0.33",
+    "@types/immutable": "^3.8.7",
     "@types/node": "^6.0.54",
+    "@types/peerjs": "^0.0.28",
     "@types/selenium-webdriver": "^2.53.37",
     "@types/socket.io-client": "^1.4.29",
     "@types/source-map": "^0.5.0",
