--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,55 +1,56 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "outDir": "tscomp",
     "module": "commonjs",
     "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "noEmitHelpers": true,
     "noUnusedLocals": false,
-    "noUnusedParameters": false,
     "strictNullChecks": false,
-    "outDir": "tscomp",
+    "noUnusedParameters": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "lib": [ "dom", "es6", "scripthost" ],
+    "rootDirs": [ "client", "common/lib" ],
     "baseUrl": ".",
     "paths": {
       "*": ["*", "common/lib/*", "node_module/*"]
     },
-    "rootDirs": [ "client", "common/lib" ],
-    "lib": [ "dom", "es6", "scripthost" ],
     "types": [
       "@angular/core",
       "@angular/http",
       "@angular/material",
       "@angular/router",
-      "socket.io-client",
-      "q",
-      "uuid",
-      "chai",
-      // "es6-promise",
-      "hammerjs",
+      "node",
       "chance",
-      "jasmine",
       "lodash",
       "webrtc",
-      "node",
+      "peerjs",
       "webpack",
-      "uglify-js",
-      "source-map",
-      "selenium-webdriver"
+      "socket.io-client",
+      "q",
+      // "uuid",
+      "chai",
+      // "es6-promise",
+      "jasmine",
+      // "hammerjs",
+      // "uglify-js",
+      "source-map"
+      // "selenium-webdriver"
     ]
   },
   "exclude": [
     "node_modules/**/*",
     "typings/main/**/*",
-    "client/demo/**/*",
+    "server/**/*",
     "build/**/*",
     "dist/**/*"
   ],
   "awesomeTypescriptLoaderOptions": {
-    "forkChecker": true,
     "useWebpackText": true,
+    "forkChecker": true,
     "useCache": true
   },
   "compileOnSave": true,
