--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "@angularclass/hmr-loader": "^3.0.2",
     "@mean-expert/boot-script": "^1.0.0",
     "@mean-expert/loopback-component-realtime": "^1.0.0-rc.3",
-    "@mean-expert/loopback-sdk-builder": "^2.1.0-rc.8",
+    "@mean-expert/loopback-sdk-builder": "^2.1.0-rc.8.2",
     "@mean-expert/loopback-stats-mixin": "^1.2.0",
     "@mean-expert/model": "^1.0.9",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.16",
@@ -116,6 +116,7 @@
     "cors": "^2.8.1",
     "dirty-chai": "^1.2.2",
     "errorhandler": "^1.5.0",
+    "flake-idgen": "^1.1.0",
     "fluent-interface-builder": "^1.0.1",
     "gossipmonger": "^0.1.10",
     "helmet": "^3.1.0",
@@ -127,7 +128,7 @@
     "loopback": "^2.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
-    "loopback-component-passport": "^3.0.0",
+    "loopback-component-passport": "~2.1.0",
     "loopback-connector-mongodb": "^1.17.0",
     "loopback-datasource-juggler": "^2.39.0",
     "loopback-ds-timestamp-mixin": "^3.4.0",
@@ -136,9 +137,12 @@
     "ng2-cloudinary": "^0.8.0",
     "ng2-nvd3": "^1.1.3",
     "node-pre-gyp": "0.6.32",
+    "noise": "^0.0.0",
     "once": "1.3.3",
     "passport-facebook": "^2.1.1",
     "peer": "0.2.8",
+    "peerjs": "^0.3.14",
+    "processing-js": "^1.6.3",
     "redux": "^3.6.0",
     "resemble": "^1.4.0",
     "rxjs": "^5.0.2",
@@ -148,7 +152,9 @@
     "socket.io-client": "^1.7.2",
     "source-map-support": "^0.4.6",
     "strong-error-handler": "^1.1.1",
+    "toxiclibsjs": "^0.3.2",
     "vibrant": "^0.0.1",
+    "webdb": "^0.5.0",
     "webpack": "2.1.0-beta.27",
     "webrtc": "^1.14.1",
     "webrtc-adapter": "^2.1.0",
@@ -201,6 +207,7 @@
     "karma-webpack": "^1.8.1",
     "mocha": "^3.2.0",
     "node-sass": "^3.4.2 || ^4.0.0",
+    "nodeunit": "^0.10.2",
     "nsp": "^2.6.2",
     "parse5": "^2.2.1",
     "progress-bar-webpack-plugin": "^1.9.0",
