--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@types/webrtc": "^0.0.21",
     "angular-cloudinary": "^1.3.1",
     "angular2-indexeddb": "^1.0.8",
+    "angulartics2": "^1.6.3",
     "async": "^2.0.1",
     "body-parser": "^1.15.2",
     "bootstrap": "4.0.0-alpha.6",
@@ -112,10 +113,12 @@
     "chance": "^1.0.4",
     "cloudinary": "^1.4.6",
     "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "cors": "^2.8.1",
     "dirty-chai": "^1.2.2",
     "errorhandler": "^1.5.0",
+    "express-session": "^1.14.2",
     "flake-idgen": "^1.1.0",
     "fluent-interface-builder": "^1.0.1",
     "gossipmonger": "^0.1.10",
@@ -129,17 +132,23 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
     "loopback-component-passport": "~2.1.0",
+    "loopback-component-storage": "^3.0.0",
     "loopback-connector-mongodb": "^1.17.0",
+    "loopback-connector-stormpath": "^0.0.1",
     "loopback-datasource-juggler": "^2.39.0",
     "loopback-ds-timestamp-mixin": "^3.4.0",
+    "loopback-stormpath": "^0.0.1",
     "metrics": "^0.1.11",
     "mongodb": "2.2.16",
+    "multer": "^1.2.1",
     "ng2-cloudinary": "^0.8.0",
     "ng2-nvd3": "^1.1.3",
     "node-pre-gyp": "0.6.32",
     "noise": "^0.0.0",
     "once": "1.3.3",
     "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
     "peer": "0.2.8",
     "peerjs": "^0.3.14",
     "processing-js": "^1.6.3",
@@ -151,6 +160,8 @@
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.7.2",
     "source-map-support": "^0.4.6",
+    "sprintf-js": "^1.0.3",
+    "stormpath": "^0.19.0",
     "strong-error-handler": "^1.1.1",
     "toxiclibsjs": "^0.3.2",
     "vibrant": "^0.0.1",
