--- a/server/config.json
+++ b/server/config.json
@@ -1,4 +1,6 @@
 {
+  "webAppUrl": "http://portfolio.dev.jchein.name:4000",
+  "restApiUrl": "http://portfolio-api.dev.jchein.name:3000/api",
   "restApiRoot": "/api",
   "host": "0.0.0.0",
   "port": 3000,
