--- a/server/model-config.json
+++ b/server/model-config.json
@@ -4,7 +4,9 @@
       "loopback/common/models",
       "loopback/server/models",
       "../common/models",
-      "./models"
+      "./models",
+      "../node_modules/loopback-component-passport/lib/models",
+      "../node_modules/loopback-stormpath/common/models"
     ],
     "mixins": [
       "loopback/common/mixins",
@@ -12,12 +14,16 @@
       "../common/mixins",
       "./mixins",
       "../node_modules/loopback-ds-timestamp-mixin",
-      "../node_modules/loopback-component-realtime/dist/mixins"
+      "../node_modules/loopback-component-realtime/dist/mixins",
+      "../node_modules/loopback-connextor-stormpath/dist/mixins"
     ]
   },
   "User": {
     "dataSource": "db",
-    "public": false
+    "public": true,
+    "options": {
+      "emailVerificationRequired": true
+    }
   },
   "AccessToken": {
     "dataSource": "db",
@@ -42,11 +48,27 @@
   "Email": {
     "dataSource": "emailDs"
   },
-  "user": {
+  "UserIdentity": {
     "dataSource": "db",
-    "public": true,
-    "options": {
-      "emailVerificationRequired": true
-    }
+    "public": false
+  },
+  "UserCredential": {
+    "dataSource": "db",
+    "public": false
+  },
+  "ApplicationCredential": {
+    "dataSource": "db",
+    "public": false
+  },
+  "StormpathUser": {
+    "dataSource": "stormpath"
+  }, 
+  "Container": {
+    "dataSource": "artStore",
+    "public": true
+  },
+  "Artwork": {
+    "dataSource": "db",
+    "public": true
   }
 }
