--- a/package.json
+++ b/package.json
@@ -76,25 +76,25 @@
     "angular-ui-router": "^0.3.2"
   },
   "dependencies": {
-    "@angular/common": "^2.4.1",
-    "@angular/compiler": "^2.4.1",
-    "@angular/core": "^2.4.1",
-    "@angular/forms": "^2.4.1",
-    "@angular/http": "^2.4.1",
+    "@angular/common": "^2.4.3",
+    "@angular/compiler": "^2.4.3",
+    "@angular/core": "^2.4.3",
+    "@angular/forms": "^2.4.3",
+    "@angular/http": "^2.4.3",
     "@angular/material": "^2.0.0-beta.1",
-    "@angular/platform-browser": "^2.4.1",
-    "@angular/platform-browser-dynamic": "^2.4.1",
-    "@angular/platform-server": "^2.4.1",
-    "@angular/router": "^3.4.1",
+    "@angular/platform-browser": "^2.4.3",
+    "@angular/platform-browser-dynamic": "^2.4.3",
+    "@angular/platform-server": "^2.4.3",
+    "@angular/router": "^3.4.3",
     "@angularclass/conventions-loader": "^1.0.13",
     "@angularclass/hmr": "^1.2.2",
     "@angularclass/hmr-loader": "^3.0.2",
     "@mean-expert/boot-script": "^1.0.0",
-    "@mean-expert/loopback-component-realtime": "^1.0.0-rc.3",
+    "@mean-expert/loopback-component-realtime": "^1.0.0-rc.4",
     "@mean-expert/loopback-sdk-builder": "^2.1.0-rc.8.2",
     "@mean-expert/loopback-stats-mixin": "^1.2.0",
     "@mean-expert/model": "^1.0.9",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.16",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
     "@types/chai": "^3.4.34",
     "@types/chance": "^0.7.31",
     "@types/lodash": "^4.14.44",
@@ -104,7 +104,7 @@
     "angular2-indexeddb": "^1.0.8",
     "angulartics2": "^1.6.3",
     "async": "^2.0.1",
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.16.0",
     "bootstrap": "4.0.0-alpha.6",
     "canvas": "^1.6.2",
     "canvas-image-uploader": "^1.0.1",
@@ -139,7 +139,7 @@
     "loopback-ds-timestamp-mixin": "^3.4.0",
     "loopback-stormpath": "^0.0.1",
     "metrics": "^0.1.11",
-    "mongodb": "2.2.16",
+    "mongodb": "^2.2.21",
     "multer": "^1.2.1",
     "ng2-cloudinary": "^0.8.0",
     "ng2-nvd3": "^1.1.3",
@@ -182,7 +182,7 @@
     "@types/source-map": "^0.5.0",
     "@types/uglify-js": "^2.6.28",
     "@types/webpack": "^2.0.0",
-    "angular-router-loader": "^0.4.0",
+    "angular-router-loader": "^0.5.0",
     "angular2-template-loader": "^0.6.0",
     "appcache-webpack-plugin": "^1.3.0",
     "assets-webpack-plugin": "^3.5.0",
