--- a/server/component-config.json
+++ b/server/component-config.json
@@ -4,7 +4,7 @@
   },
   "@mean-expert/loopback-component-realtime": {
     "debug": true,
-    "auth": true,
+    "auth": false,
     "driver": {
       "name": "socket.io"
     },
