--- a/package.json
+++ b/package.json
@@ -76,16 +76,16 @@
     "angular-ui-router": "^0.3.2"
   },
   "dependencies": {
-    "@angular/common": "2.4.6",
-    "@angular/compiler": "2.4.6",
-    "@angular/core": "2.4.6",
-    "@angular/forms": "2.4.6",
-    "@angular/http": "2.4.6",
-    "@angular/material": "^2.0.0-beta.1",
-    "@angular/platform-browser": "2.4.6",
-    "@angular/platform-browser-dynamic": "2.4.6",
-    "@angular/platform-server": "2.4.6",
-    "@angular/router": "3.4.6",
+    "@angular/common": "2.4.8",
+    "@angular/compiler": "2.4.8",
+    "@angular/core": "2.4.8",
+    "@angular/forms": "2.4.8",
+    "@angular/http": "2.4.8",
+    "@angular/material": "2.0.0-beta.2",
+    "@angular/platform-browser": "2.4.8",
+    "@angular/platform-browser-dynamic": "2.4.8",
+    "@angular/platform-server": "2.4.8",
+    "@angular/router": "3.4.8",
     "@angularclass/conventions-loader": "^1.0.13",
     "@angularclass/hmr": "^1.2.2",
     "@angularclass/hmr-loader": "^3.0.2",
@@ -94,7 +94,7 @@
     "@mean-expert/loopback-sdk-builder": "^2.1.0-rc.8.3",
     "@mean-expert/loopback-stats-mixin": "^1.2.0",
     "@mean-expert/model": "^1.0.9",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.18",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.20",
     "@types/chai": "^3.4.34",
     "@types/chance": "^0.7.31",
     "@types/localforage": "^0.0.33",
@@ -112,7 +112,7 @@
     "chai-as-promised": "^6.0.0",
     "chai-immutable": "^1.6.0",
     "chance": "^1.0.4",
-    "cloudinary": "^1.4.6",
+    "cloudinary": "1.7.0",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
@@ -164,6 +164,7 @@
     "serve-favicon": "^2.3.2",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.7.2",
+    "socket.io-p2p-server": "^1.2.0",
     "source-map-support": "^0.4.11",
     "sprintf-js": "^1.0.3",
     "stormpath": "^0.19.0",
@@ -172,12 +173,13 @@
     "tslib": "^1.5.0",
     "vibrant": "^0.0.1",
     "webdb": "^0.5.0",
-    "webpack": "2.1.0-beta.27",
+    "webpack": "2.2.1",
     "webrtc": "^1.14.1",
-    "webrtc-adapter": "^3.1.2",
-    "zone.js": "^0.7.2"
+    "webrtc-adapter": "3.1.5",
+    "zone.js": "07.7"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0-beta.32.3",
     "@types/es6-promise": "^0.0.32",
     "@types/hammerjs": "^2.0.33",
     "@types/immutable": "^3.8.7",
@@ -187,9 +189,9 @@
     "@types/socket.io-client": "^1.4.29",
     "@types/source-map": "^0.5.0",
     "@types/uglify-js": "^2.6.28",
-    "@types/webpack": "^2.2.4",
+    "@types/webpack": "2.2.6",
     "angular-router-loader": "^0.5.0",
-    "angular2-template-loader": "^0.6.1",
+    "angular2-template-loader": "0.6.2",
     "appcache-webpack-plugin": "^1.3.0",
     "assets-webpack-plugin": "^3.5.0",
     "awesome-typescript-loader": "^3.0.0-beta.18",
@@ -217,10 +219,13 @@
     "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.1",
     "karma-remap-coverage": "^0.1.3",
+    "karma-remap-istanbul": "^0.6.0",
     "karma-webpack": "^1.8.1",
     "mocha": "^3.2.0",
     "node-sass": "^4.5.0",
@@ -248,7 +253,7 @@
     "ts-node": "^1.7.3",
     "tslint": "^4.3.1",
     "tslint-loader": "^3.3.0",
-    "typescript": "^2.1.5",
+    "typescript": "2.1.6",
     "url-loader": "^0.5.7",
     "v8-lazy-parse-webpack-plugin": "^0.3.0",
     "webpack-browser-plugin": "^1.0.20",
