--- a/package.json
+++ b/package.json
@@ -76,63 +76,59 @@
     "angular-ui-router": "^0.3.2"
   },
   "dependencies": {
-    "@angular/common": "2.4.8",
-    "@angular/compiler": "2.4.8",
-    "@angular/core": "2.4.8",
-    "@angular/forms": "2.4.8",
-    "@angular/http": "2.4.8",
-    "@angular/material": "2.0.0-beta.2",
-    "@angular/platform-browser": "2.4.8",
-    "@angular/platform-browser-dynamic": "2.4.8",
-    "@angular/platform-server": "2.4.8",
-    "@angular/router": "3.4.8",
+    "@angular/animations": "^4.3.1",
+    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/common": "^4.3.1",
+    "@angular/compiler": "^4.3.1",
+    "@angular/core": "^4.3.1",
+    "@angular/forms": "^4.3.1",
+    "@angular/http": "^4.3.1",
+    "@angular/material": "^2.0.0-beta.8",
+    "@angular/platform-browser": "^4.3.1",
+    "@angular/platform-browser-dynamic": "^4.3.1",
+    "@angular/platform-server": "^4.3.1",
+    "@angular/router": "^4.3.1",
     "@angularclass/conventions-loader": "^1.0.13",
-    "@angularclass/hmr": "^1.2.2",
-    "@angularclass/hmr-loader": "^3.0.2",
+    "@angularclass/hmr": "^2.1.3",
+    "@angularclass/hmr-loader": "^3.0.4",
     "@mean-expert/boot-script": "^1.0.0",
-    "@mean-expert/loopback-component-realtime": "^1.0.0-rc.4",
-    "@mean-expert/loopback-sdk-builder": "^2.1.0-rc.8.3",
-    "@mean-expert/loopback-stats-mixin": "^1.2.0",
+    "@mean-expert/loopback-component-realtime": "^1.0.0-rc.9.4",
+    "@mean-expert/loopback-sdk-builder": "^2.1.0-rc.13.1",
+    "@mean-expert/loopback-stats-mixin": "^1.2.1",
     "@mean-expert/model": "^1.0.9",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.20",
-    "@types/chai": "^3.4.34",
-    "@types/chance": "^0.7.31",
-    "@types/localforage": "^0.0.33",
-    "@types/lodash": "^4.14.44",
-    "@types/uuid": "^2.0.29",
-    "@types/webrtc": "^0.0.21",
-    "angular-async-local-storage": "^1.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.28",
+    "@types/chance": "^0.7.33",
+    "@types/lodash": "^4.14.71",
+    "@types/uuid": "^3.4.0",
+    "angular-async-local-storage": "^1.4.0",
     "angular-cloudinary": "^1.3.1",
-    "angulartics2": "^1.6.3",
-    "async": "^2.0.1",
-    "body-parser": "^1.16.0",
+    "angulartics2": "^2.2.2",
+    "async": "^2.5.0",
+    "body-parser": "^1.17.2",
     "bootstrap": "4.0.0-alpha.6",
-    "canvas": "^1.6.2",
+    "canvas": "^1.6.5",
     "canvas-image-uploader": "^1.0.1",
-    "chai-as-promised": "^6.0.0",
-    "chai-immutable": "^1.6.0",
-    "chance": "^1.0.4",
-    "cloudinary": "1.7.0",
-    "compression": "^1.6.2",
+    "chance": "^1.0.10",
+    "cloudinary": "^1.9.0",
+    "compression": "^1.7.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
-    "cors": "^2.8.1",
-    "dirty-chai": "^1.2.2",
+    "cors": "^2.8.4",
     "errorhandler": "^1.5.0",
-    "es6-promise": "^4.0.5",
-    "express-session": "^1.14.2",
+    "es6-object-assign": "^1.1.0",
+    "express-session": "^1.15.4",
     "flake-idgen": "^1.1.0",
-    "fluent-interface-builder": "^1.0.1",
+    "fluent-interface-builder": "^2.0.1",
     "gossipmonger": "^0.1.10",
-    "helmet": "^3.1.0",
-    "http-server": "^0.9.0",
+    "helmet": "^3.8.0",
+    "http-server": "^0.10.0",
     "ie-shim": "^0.1.0",
     "immutable": "^3.8.1",
     "jscache": "^0.5.4",
     "kmeans-js": "^0.1.2",
-    "localforage": "^1.4.3",
-    "lodash": "^4.17.2",
-    "loopback": "^2.22.0",
+    "localforage": "^1.5.0",
+    "lodash": "^4.17.4",
+    "loopback": "2.38.3",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
     "loopback-component-passport": "~2.1.0",
@@ -140,128 +136,114 @@
     "loopback-connector-mongodb": "^1.17.0",
     "loopback-connector-stormpath": "^0.0.1",
     "loopback-datasource-juggler": "^2.39.0",
-    "loopback-ds-timestamp-mixin": "^3.4.0",
+    "loopback-ds-timestamp-mixin": "^3.4.1",
     "loopback-stormpath": "^0.0.1",
-    "metrics": "^0.1.11",
-    "mongodb": "^2.2.21",
-    "multer": "^1.2.1",
-    "ng2-cloudinary": "^0.9.2",
-    "ng2-nvd3": "^1.1.3",
-    "node-pre-gyp": "^0.6.33",
-    "once": "1.3.3",
+    "mongodb": "^2.2.30",
+    "multer": "^1.3.0",
+    "ng2-file-upload": "^1.2.1",
+    "ng2-nvd3": "^2.0.0-rc3",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
-    "peer": "0.2.8",
     "peerjs": "^0.3.14",
     "picolog": "^1.0.4",
-    "processing-js": "^1.6.3",
-    "redux": "^3.6.0",
-    "reflect-metadata": "^0.1.9",
+    "reflect-metadata": "^0.1.10",
     "resemble": "^1.4.0",
-    "rxjs": "^5.1.0",
+    "rxjs": "^5.4.2",
     "script-loader": "^0.7.0",
-    "serve-favicon": "^2.3.2",
-    "socket.io": "^1.4.8",
-    "socket.io-client": "^1.7.2",
-    "socket.io-p2p-server": "^1.2.0",
-    "source-map-support": "^0.4.11",
-    "sprintf-js": "^1.0.3",
-    "stormpath": "^0.19.0",
-    "strong-error-handler": "^1.1.1",
+    "serve-favicon": "^2.4.3",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
+    "source-map-support": "^0.4.15",
+    "sprintf-js": "^1.1.1",
+    "stormpath": "^0.20.1",
+    "strong-error-handler": "^2.2.0",
     "toxiclibsjs": "^0.3.2",
-    "tslib": "^1.5.0",
+    "tslib": "^1.7.1",
     "vibrant": "^0.0.1",
-    "webdb": "^0.5.0",
-    "webpack": "2.2.1",
-    "webrtc": "^1.14.1",
-    "webrtc-adapter": "3.1.5",
-    "zone.js": "07.7"
+    "webpack": "^3.3.0",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-beta.32.3",
-    "@types/es6-promise": "^0.0.32",
+    "@angular/cli": "^1.2.3",
     "@types/hammerjs": "^2.0.33",
-    "@types/immutable": "^3.8.7",
+    "@types/jasmine": "^2.5.53",
+    "@types/jasmine-expect": "^3.6.1",
     "@types/node": "^6.0.54",
-    "@types/peerjs": "^0.0.28",
-    "@types/selenium-webdriver": "^2.53.39",
+    "@types/selenium-webdriver": "~2.53.39",
     "@types/socket.io-client": "^1.4.29",
     "@types/source-map": "^0.5.0",
-    "@types/uglify-js": "^2.6.28",
-    "@types/webpack": "2.2.6",
-    "angular-router-loader": "^0.5.0",
+    "@types/uglify-js": "^2.6.29",
+    "@types/webpack": "^3.0.5",
+    "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "0.6.2",
     "appcache-webpack-plugin": "^1.3.0",
-    "assets-webpack-plugin": "^3.5.0",
-    "awesome-typescript-loader": "^3.0.0-beta.18",
-    "chai": "^3.5.0",
-    "codelyzer": "^2.0.0-beta.4",
+    "assets-webpack-plugin": "^3.5.1",
+    "awesome-typescript-loader": "^3.2.1",
+    "codelyzer": "^3.1.2",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    "debug": "^2.6.0",
+    "css-loader": "^0.28.4",
+    "debug": "^2.6.8",
     "ejs-loader": "^0.3.0",
-    "eslint": "^3.15.0",
-    "eslint-config-google": "^0.7.1",
-    "eslint-config-loopback": "^6.1.0",
-    "exports-loader": "^0.6.3",
-    "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "2.0.0-beta.4",
-    "file-loader": "^0.9.0",
-    "gh-pages": "^0.12.0",
+    "eslint": "^4.3.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-config-loopback": "^8.0.0",
+    "exports-loader": "^0.6.4",
+    "expose-loader": "^0.7.3",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.8",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^2.29.0",
     "html-webpack-template": "^6.0.1",
-    "imports-loader": "^0.7.0",
-    "istanbul-instrumenter-loader": "^1.1.0",
-    "jshint": "^2.9.4",
-    "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "imports-loader": "^0.7.1",
+    "istanbul-instrumenter-loader": "^2.0.0",
+    "jasmine-expect": "^3.7.0",
+    "jasmine-promises": "^0.4.1",
+    "jshint": "^2.9.5",
+    "json-loader": "^0.5.7",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.1",
+    "karma-mocha-reporter": "^2.2.3",
     "karma-remap-coverage": "^0.1.3",
     "karma-remap-istanbul": "^0.6.0",
-    "karma-webpack": "^1.8.1",
-    "mocha": "^3.2.0",
-    "node-sass": "^4.5.0",
-    "nodeunit": "^0.10.2",
-    "nsp": "^2.6.2",
-    "nyc": "^10.1.2",
-    "parse5": "^2.2.1",
-    "progress-bar-webpack-plugin": "^1.9.0",
-    "protractor": "^4.0.14",
+    "karma-webpack": "^2.0.4",
+    "node-sass": "^4.5.3",
+    "nodeunit": "^0.11.1",
+    "nsp": "^2.6.3",
+    "nyc": "^11.0.3",
+    "parse5": "^3.0.2",
+    "progress-bar-webpack-plugin": "^1.10.0",
+    "protractor": "^5.1.2",
     "raw-loader": "^0.5.1",
-    "rimraf": "2.5.3",
-    "sass-loader": "^4.1.1",
-    "script-ext-html-webpack-plugin": "^1.3.4",
-    "sinon": "^1.17.6",
-    "source-map-loader": "^0.1.6",
-    "string-replace-loader": "^1.0.5",
-    "style-loader": "^0.13.1",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
+    "script-ext-html-webpack-plugin": "^1.8.5",
+    "source-map-loader": "^0.2.1",
+    "string-replace-loader": "^1.3.0",
+    "style-loader": "^0.18.2",
     "supertest": "^3.0.0",
-    "sw-precache-webpack-plugin": "^0.7.1",
-    "tape": "^4.6.3",
-    "temp": "^0.8.3",
+    "sw-precache-webpack-plugin": "^0.11.4",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "^1.1.2",
-    "ts-loader": "^1.3.3",
-    "ts-node": "^1.7.3",
-    "tslint": "^4.3.1",
-    "tslint-loader": "^3.3.0",
-    "typescript": "2.1.6",
-    "url-loader": "^0.5.7",
+    "ts-loader": "^2.3.1",
+    "ts-node": "^3.2.1",
+    "tslint": "^5.5.0",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^2.4.2",
+    "url-loader": "^0.5.9",
     "v8-lazy-parse-webpack-plugin": "^0.3.0",
     "webpack-browser-plugin": "^1.0.20",
     "webpack-core": "^0.6.9",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-dev-server": "^2.3.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-dev-server": "^2.6.0",
     "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "^2.6.1",
-    "yargs": "^6.5.0"
+    "webpack-merge": "^4.1.0",
+    "workbox-webpack-plugin": "^1.1.0",
+    "yargs": "^8.0.2"
   }
 }
