--- a/.jshintrc
+++ b/.jshintrc
@@ -11,7 +11,7 @@
   "newcap": true,
   "nonew": true,
   "noarg": true,
-  "quotmark": "double",
+  "quotmark": "single",
   "regexp": true,
   "undef": true,
   "unused": false,
