--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "protractor": "protractor",
     "rimraf": "rimraf",
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
-    "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --context client/",
+    "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --context client/ --host portfolio-api.dev.jchein.name --port 4000",
     "server:prod": "http-server dist --cors",
     "server:prod:ci": "http-server dist -p 4000 --cors",
     "server": "npm run server:dev",
@@ -62,7 +62,6 @@
     "webdriver-manager": "webdriver-manager",
     "webdriver:start": "npm run webdriver-manager start",
     "webdriver:update": "npm run webdriver-manager update",
-    "webpack-dev-server": "webpack-dev-server --context client/",
     "webpack": "webpack"
   },
   "engine": {
@@ -93,7 +92,6 @@
     "@angularclass/hmr-loader": "^3.0.4",
     "@mean-expert/boot-script": "^1.0.0",
     "@mean-expert/loopback-component-realtime": "^1.0.0-rc.9.4",
-    "@mean-expert/loopback-sdk-builder": "^2.1.0-rc.13.1",
     "@mean-expert/loopback-stats-mixin": "^1.2.1",
     "@mean-expert/model": "^1.0.9",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.28",
@@ -120,6 +118,7 @@
     "flake-idgen": "^1.1.0",
     "fluent-interface-builder": "^2.0.1",
     "gossipmonger": "^0.1.10",
+    "hammerjs": "^2.0.8",
     "helmet": "^3.8.0",
     "http-server": "^0.10.0",
     "ie-shim": "^0.1.0",
@@ -159,6 +158,7 @@
     "stormpath": "^0.20.1",
     "strong-error-handler": "^2.2.0",
     "toxiclibsjs": "^0.3.2",
+    "tsconfig-paths": "^2.2.0",
     "tslib": "^1.7.1",
     "vibrant": "^0.0.1",
     "webpack": "^3.3.0",
@@ -166,6 +166,7 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.2.3",
+    "@mean-expert/loopback-sdk-builder": "^2.1.0-rc.13.5",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.5.53",
     "@types/jasmine-expect": "^3.6.1",
